Change fr and em css sizes to percentages and pixels to try to fix layout on iphone/safari (not sure if it will work)

--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
 
 #main-sheet {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 33%);
     width: 100%;
     /* background-color: aquamarine; */
-    padding-left: 1em;
+    padding-left: 10px; /*1em;*/
     /* border-bottom: 1px solid black; */
 }
 
@@ -45,7 +45,7 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
     justify-content: center;
     width: 100%;
     /* background-color: aqua; */
-    padding-bottom: 1em;
+    padding-bottom: 10px; /*1em;*/
 }
 
 #doughbuttons {
@@ -53,7 +53,7 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
     flex: 1;
     justify-content: center;
     width: 80%;
-    gap: 1em;
+    gap: 10px; /*1em;*/
 }
 
 .doughbutton {
@@ -92,7 +92,7 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
 
 #totals-grid {
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
+    grid-template-columns: 55% 45%;/*1.5fr 1fr;*/
     width: auto;
     /* background-color: aqua; */
 }
